# schloss

./: .gitignore  README.md  setup.cfg  setup.py
examples/: full_example.py
schloss/: __init__.py  consumer.py  dispatcher.py  limited_repr.py  producer.py  session.py  types.py
tests/: conftest.py  docker-compose.yml  test_consumer.py  test_kafka_dispatcher.py
