[metadata]
name = schloss
long_description = file: README.rst
author = Danil Lugovskoy
author_email = deniallugo@gmail.com
url = https://github.com/deniallugo/schloss
license = MIT

[options]
packages =
    schloss
install_requires =
    aiokafka>=0.6.0
setup_requires =
    pytest-runner>=5.2
    setuptools_scm>=3.5.0
tests_require =
    pytest>=5.4.2
    pytest-cov>=2.8.1
    pytest-docker>=0.7
    pytest-asyncio>=0.10.0


[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts = --strict-markers -r aP --tb=native --cov

[coverage:run]
branch = True
source =
    schloss
[coverage:report]
show_missing = True

